welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:1: error: type mismatch;
 found   : Unit
 required: Int
def max1020(a:Int, b:Int):Int = {if (((9<a)&&(a<21))||((9<b)&&(b<21))) {if (a>b) {if ((9<a)&&(a<21)) {return a}} else return b} 
                                                                                  ^